--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "google-map-react": "^1.1.4",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-collapse": "^4.0.3",
     "react-dom": "^16.8.6",
+    "react-motion": "^0.5.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "reactstrap": "^8.0.0"
