--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,12 @@
     "react-collapse": "^4.0.3",
     "react-dom": "^16.8.6",
     "react-motion": "^0.5.2",
+    "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
-    "reactstrap": "^8.0.0"
+    "reactstrap": "^8.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
