--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "A social network app for families",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client": "npm run start --prefix client",
+    "server": "node server.js",
+    "program": "concurrently \"npm run server\" \"npm run client\"",
+    "dev-serve": "nodemon server.js",
+    "dev": "concurrently \"npm run dev-serve\" \"npm run client\""
   },
   "author": "Rich Eldridge",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "mongoose": "^5.5.7"
   }
