--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "client": "npm run start --prefix client",
+    "client": "cd client && npm run start",
     "server": "node server.js",
     "program": "concurrently \"npm run server\" \"npm run client\"",
     "dev-serve": "nodemon server.js",
